Processed more synthetic REZ scenarios

--- a/07_REZ_power.ipynb
+++ b/07_REZ_power.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 52,
    "id": "e751ef1e-561a-466e-9d52-fc24a38cb20e",
    "metadata": {},
    "outputs": [],
@@ -21,14 +21,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "110fe4e4-c193-41f5-a258-b9de322e105f",
+   "execution_count": 74,
+   "id": "2c573e26-2263-40a3-9eae-a817d59628ee",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# client.close()\n",
+    "# cluster.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "110fe4e4-c193-41f5-a258-b9de322e105f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/g/data/w42/dr6273/apps/conda/envs/pangeo/lib/python3.10/site-packages/distributed/node.py:182: UserWarning: Port 8787 is already in use.\n",
+      "Perhaps you already have a cluster running?\n",
+      "Hosting the HTTP server on port 36665 instead\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
     "# One node on Gadi has 48 cores - try and use up a full node before going to multiple nodes (jobs)\n",
     "\n",
-    "walltime = \"00:05:00\"\n",
+    "walltime = \"00:10:00\"\n",
     "cores = 48\n",
     "memory = str(4 * cores) + \"GB\"\n",
     "\n",
@@ -37,16 +59,18 @@
     "                                           \"-P dt6\",\n",
     "                                           \"-l ncpus=\"+str(cores),\n",
     "                                           \"-l mem=\"+str(memory),\n",
-    "                                           \"-l storage=gdata/w42+gdata/rt52\"],\n",
+    "                                           \"-l storage=gdata/w42+gdata/rt52+scratch/dt6\"],\n",
     "                     local_directory=\"$TMPDIR\",\n",
     "                     job_directives_skip=[\"select\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 76,
    "id": "1604c7e6-ee20-4ea2-91f3-bf10ec5874bf",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "cluster.scale(jobs=3)\n",
@@ -55,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 65,
    "id": "f9fc9dc4-49ef-4215-b12b-b0151c9d0a2f",
    "metadata": {},
    "outputs": [
@@ -66,7 +90,7 @@
        "    <div style=\"width: 24px; height: 24px; background-color: #e1e1e1; border: 3px solid #9D9D9D; border-radius: 5px; position: absolute;\"> </div>\n",
        "    <div style=\"margin-left: 48px;\">\n",
        "        <h3 style=\"margin-bottom: 0px;\">Client</h3>\n",
-       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Client-8c893cc9-ddd1-11ef-aa89-000007c3fe80</p>\n",
+       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Client-6249e408-e4e0-11ef-ba6b-000007cffe80</p>\n",
        "        <table style=\"width: 100%; text-align: left;\">\n",
        "\n",
        "        <tr>\n",
@@ -79,7 +103,7 @@
        "        \n",
        "            <tr>\n",
        "                <td style=\"text-align: left;\">\n",
-       "                    <strong>Dashboard: </strong> <a href=\"/proxy/8787/status\" target=\"_blank\">/proxy/8787/status</a>\n",
+       "                    <strong>Dashboard: </strong> <a href=\"/proxy/34707/status\" target=\"_blank\">/proxy/34707/status</a>\n",
        "                </td>\n",
        "                <td style=\"text-align: left;\"></td>\n",
        "            </tr>\n",
@@ -88,7 +112,7 @@
        "        </table>\n",
        "\n",
        "        \n",
-       "            <button style=\"margin-bottom: 12px;\" data-commandlinker-command=\"dask:populate-and-launch-layout\" data-commandlinker-args='{\"url\": \"/proxy/8787/status\" }'>\n",
+       "            <button style=\"margin-bottom: 12px;\" data-commandlinker-command=\"dask:populate-and-launch-layout\" data-commandlinker-args='{\"url\": \"/proxy/34707/status\" }'>\n",
        "                Launch dashboard in JupyterLab\n",
        "            </button>\n",
        "        \n",
@@ -101,11 +125,11 @@
        "    </div>\n",
        "    <div style=\"margin-left: 48px;\">\n",
        "        <h3 style=\"margin-bottom: 0px; margin-top: 0px;\">PBSCluster</h3>\n",
-       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">c8af2139</p>\n",
+       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">ca09760d</p>\n",
        "        <table style=\"width: 100%; text-align: left;\">\n",
        "            <tr>\n",
        "                <td style=\"text-align: left;\">\n",
-       "                    <strong>Dashboard:</strong> <a href=\"/proxy/8787/status\" target=\"_blank\">/proxy/8787/status</a>\n",
+       "                    <strong>Dashboard:</strong> <a href=\"/proxy/34707/status\" target=\"_blank\">/proxy/34707/status</a>\n",
        "                </td>\n",
        "                <td style=\"text-align: left;\">\n",
        "                    <strong>Workers:</strong> 0\n",
@@ -132,11 +156,11 @@
        "        <div style=\"width: 24px; height: 24px; background-color: #FFF7E5; border: 3px solid #FF6132; border-radius: 5px; position: absolute;\"> </div>\n",
        "        <div style=\"margin-left: 48px;\">\n",
        "            <h3 style=\"margin-bottom: 0px;\">Scheduler</h3>\n",
-       "            <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Scheduler-6dbbaca2-065a-4ca3-880b-8c758d4d0c72</p>\n",
+       "            <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Scheduler-09fdc754-2b30-4427-8dc4-618d41596049</p>\n",
        "            <table style=\"width: 100%; text-align: left;\">\n",
        "                <tr>\n",
        "                    <td style=\"text-align: left;\">\n",
-       "                        <strong>Comm:</strong> tcp://10.6.121.1:39561\n",
+       "                        <strong>Comm:</strong> tcp://10.6.121.3:45599\n",
        "                    </td>\n",
        "                    <td style=\"text-align: left;\">\n",
        "                        <strong>Workers:</strong> 0\n",
@@ -144,7 +168,7 @@
        "                </tr>\n",
        "                <tr>\n",
        "                    <td style=\"text-align: left;\">\n",
-       "                        <strong>Dashboard:</strong> <a href=\"/proxy/8787/status\" target=\"_blank\">/proxy/8787/status</a>\n",
+       "                        <strong>Dashboard:</strong> <a href=\"/proxy/34707/status\" target=\"_blank\">/proxy/34707/status</a>\n",
        "                    </td>\n",
        "                    <td style=\"text-align: left;\">\n",
        "                        <strong>Total threads:</strong> 0\n",
@@ -182,10 +206,10 @@
        "</div>"
       ],
       "text/plain": [
-       "<Client: 'tcp://10.6.121.1:39561' processes=0 threads=0, memory=0 B>"
+       "<Client: 'tcp://10.6.121.3:45599' processes=0 threads=0, memory=0 B>"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "93146e58-ecad-4b7b-a0f4-cc65e6f8724d",
    "metadata": {},
    "outputs": [],
@@ -207,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "9d3ead5d-258f-4617-9e66-128e2a75de80",
    "metadata": {},
    "outputs": [
@@ -226,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "5d58c151-da0f-46d0-8453-ce3124658dfd",
    "metadata": {},
    "outputs": [],
@@ -253,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "3f8708a2-05db-497d-aeb8-67dd1432e300",
    "metadata": {},
    "outputs": [],
@@ -271,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "id": "c2cd8a6f-9879-42e8-8d1a-d5c58a53734a",
    "metadata": {},
    "outputs": [],
@@ -281,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "id": "9c33430f-53e8-4074-82be-811d6621408f",
    "metadata": {},
    "outputs": [],
@@ -293,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "id": "24278640-949e-4901-8f99-e3cc29004bcf",
    "metadata": {},
    "outputs": [],
@@ -310,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "id": "31f819a2-c499-4a97-b93c-b3592e58d654",
    "metadata": {},
    "outputs": [
@@ -1838,7 +1862,7 @@
        "[43 rows x 22 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1860,7 +1884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "id": "7071630a-ab38-4618-98bf-06d87c320af0",
    "metadata": {},
    "outputs": [],
@@ -1872,7 +1896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "id": "f227acf8-ac33-4d4d-9014-5bf919ffbcda",
    "metadata": {},
    "outputs": [],
@@ -1884,7 +1908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "id": "4c365559-ec53-4792-b9f5-74f7ffb818f1",
    "metadata": {},
    "outputs": [],
@@ -1896,7 +1920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "id": "e2201aad-da06-45cb-af24-c1d43bc9f30a",
    "metadata": {},
    "outputs": [],
@@ -1908,7 +1932,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
+   "id": "0dce6c13-9a11-44f9-a6dd-05b7a5a91b45",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Replace Step change 2049-50 wind in N11 with 2,900 MW (https://www.dcceew.gov.au/energy/renewable/offshore-wind/areas/illawarra)\n",
+    "gen[\"artificial_V7_wind_2049-50\"] = gen[\"Step_change_wind_2049-50\"].copy()\n",
+    "gen.loc[\"V7\", \"artificial_V7_wind_2049-50\"] = 2900"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "841e8a36-f9ed-40a1-8945-9b74076a7696",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Replace Step change 2049-50 wind in S6 with with renewable potential (2,400 MW)\n",
+    "gen[\"artificial_S6_wind_2049-50\"] = gen[\"Step_change_wind_2049-50\"].copy()\n",
+    "gen.loc[\"S6\", \"artificial_S6_wind_2049-50\"] = 2400"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "b74ef68c-a2fc-4276-b6d4-e710df7b0701",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Replace Step change 2049-50 wind in S9 with green energy scenario\n",
+    "gen[\"artificial_S9_wind_2049-50\"] = gen[\"Step_change_wind_2049-50\"].copy()\n",
+    "gen.loc[\"S9\", \"artificial_S9_wind_2049-50\"] = gen.loc[\"S9\"][\"Green_energy_wind_2049-50\"].copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "21a8a09c-63ad-4441-b735-feeabd7592ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Replace Step change 2049-50 wind in S10 with renewable potential (20,428 MW)\n",
+    "gen[\"artificial_S10_wind_2049-50\"] = gen[\"Step_change_wind_2049-50\"].copy()\n",
+    "gen.loc[\"S10\", \"artificial_S10_wind_2049-50\"] = 20428"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "e869b73c-b2bb-4a33-b308-1a0d06053fbf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Replace Step change 2049-50 wind in V4 with green energy scenario\n",
+    "gen[\"artificial_V4_wind_2049-50\"] = gen[\"Step_change_wind_2049-50\"].copy()\n",
+    "gen.loc[\"V4\", \"artificial_V4_wind_2049-50\"] = gen.loc[\"V4\"][\"Green_energy_wind_2049-50\"].copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "id": "78c27bfb-e820-4d64-8a4a-edddfabce395",
    "metadata": {},
    "outputs": [
@@ -1916,7 +2000,7 @@
      "data": {
       "text/plain": [
        "Solar_renewable_potential_(MW)       0\n",
-       "Wind_renewable_potential_(MW)     7420\n",
+       "Wind_renewable_potential_(MW)     3442\n",
        "Existing_solar                       0\n",
        "Progressive_solar_2029-30            0\n",
        "Progressive_solar_2039-40            0\n",
@@ -1927,51 +2011,35 @@
        "Green_energy_solar_2029-30           0\n",
        "Green_energy_solar_2039-40           0\n",
        "Green_energy_solar_2049-50           0\n",
-       "Existing_wind                        0\n",
-       "Progressive_wind_2029-30             0\n",
-       "Progressive_wind_2039-40             0\n",
-       "Progressive_wind_2049-50             0\n",
-       "Step_change_wind_2029-30             0\n",
-       "Step_change_wind_2039-40             0\n",
-       "Step_change_wind_2049-50             0\n",
-       "Green_energy_wind_2029-30            0\n",
-       "Green_energy_wind_2039-40            0\n",
-       "Green_energy_wind_2049-50            0\n",
-       "artificial_Q1_wind_2049-50           0\n",
-       "artificial_Q2_wind_2049-50           0\n",
-       "artificial_N10_wind_2049-50       5200\n",
-       "artificial_N11_wind_2049-50          0\n",
-       "Name: N10, dtype: int64"
+       "Existing_wind                     3300\n",
+       "Progressive_wind_2029-30          3300\n",
+       "Progressive_wind_2039-40          3300\n",
+       "Progressive_wind_2049-50          4600\n",
+       "Step_change_wind_2029-30          4100\n",
+       "Step_change_wind_2039-40          4150\n",
+       "Step_change_wind_2049-50          6350\n",
+       "Green_energy_wind_2029-30         5350\n",
+       "Green_energy_wind_2039-40         5400\n",
+       "Green_energy_wind_2049-50         7800\n",
+       "artificial_Q1_wind_2049-50        6350\n",
+       "artificial_Q2_wind_2049-50        6350\n",
+       "artificial_N10_wind_2049-50       6350\n",
+       "artificial_N11_wind_2049-50       6350\n",
+       "artificial_V7_wind_2049-50        6350\n",
+       "artificial_S6_wind_2049-50        6350\n",
+       "artificial_S9_wind_2049-50        6350\n",
+       "artificial_S10_wind_2049-50       6350\n",
+       "artificial_V4_wind_2049-50        7800\n",
+       "Name: V4, dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "gen.loc[\"N10\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "e93e4b7d-a18c-4248-a53d-bba53b4875c3",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "13.779329608938548"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "19732 / 1432"
+    "gen.loc[\"V4\"]"
    ]
   },
   {
@@ -1984,7 +2052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 40,
    "id": "ebb57503-1fc1-400c-b179-07d011e12cf9",
    "metadata": {},
    "outputs": [],
@@ -2008,7 +2076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 41,
    "id": "0c7c55cd-ad51-4575-9396-9698f17d808e",
    "metadata": {},
    "outputs": [],
@@ -2018,7 +2086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 42,
    "id": "68b1250e-7361-443c-ade2-68ca5063d7c8",
    "metadata": {},
    "outputs": [],
@@ -2028,7 +2096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 43,
    "id": "7030566a-1da2-4ad1-9016-39d5bb38b111",
    "metadata": {},
    "outputs": [],
@@ -2038,7 +2106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 44,
    "id": "a4d7bbb1-f527-4e3c-8fb3-ee041187a70f",
    "metadata": {},
    "outputs": [],
@@ -2061,7 +2129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 45,
    "id": "07af249d-6c3f-44d1-90bf-9d2b63224a2c",
    "metadata": {},
    "outputs": [],
@@ -2090,7 +2158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 46,
    "id": "c8898724-1b02-4519-93f4-b8c32c61d12e",
    "metadata": {},
    "outputs": [],
@@ -2127,7 +2195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 47,
    "id": "2e35a159-901f-4d5c-8ec4-8fe6c3282629",
    "metadata": {},
    "outputs": [],
@@ -2155,7 +2223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 48,
    "id": "5ea96f76-cd3d-4c70-a8d1-21dfc64d95ec",
    "metadata": {},
    "outputs": [],
@@ -2212,44 +2280,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 77,
    "id": "33a56215-7940-4a4c-a2a1-382d375bca3b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['artificial_Q2_wind_2049-50'], dtype='object')"
+       "Index(['artificial_V4_wind_2049-50'], dtype='object')"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "gen.columns[-3:-2]"
+    "gen.columns[-1:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 78,
    "id": "b198a08e-a96b-4350-845d-ec1a97282ba4",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "artificial_Q2_wind_2049-50\n",
-      "CPU times: user 1min 34s, sys: 3.01 s, total: 1min 37s\n",
-      "Wall time: 1min 55s\n"
+      "artificial_V4_wind_2049-50\n",
+      "CPU times: user 2min 16s, sys: 5.28 s, total: 2min 21s\n",
+      "Wall time: 2min 21s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "for scenario in gen.columns[-3:-2]:\n",
+    "for scenario in gen.columns[-1:]:\n",
     "# for scenario in [\"Existing_wind\", \"Existing_solar\"]:\n",
     "    print(scenario)\n",
     "    gen_ds = calc_all_years_generation(years, mask, gen[scenario])\n",
@@ -2270,7 +2340,13 @@
    "cell_type": "code",
    "execution_count": 22,
    "id": "2978fca8-6b59-42e0-afa1-4ab241ed437e",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2380,7 +2456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 79,
    "id": "51a6eef2-db8b-45b9-99e6-9019c29b0ae7",
    "metadata": {},
    "outputs": [],
