Computed capacity factors with solar reduced by 1%

--- a/03_solar_capacity_factor.ipynb
+++ b/03_solar_capacity_factor.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d11f1cb7-4bc1-413f-a31f-5a93eb872c64",
    "metadata": {},
    "outputs": [],
@@ -50,20 +50,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "2afe4fa2-0c6c-481c-a7ff-89faf1adc9ba",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/g/data/w42/dr6273/apps/conda/envs/pangeo/lib/python3.10/site-packages/distributed/node.py:182: UserWarning: Port 8787 is already in use.\n",
+      "Perhaps you already have a cluster running?\n",
+      "Hosting the HTTP server on port 45291 instead\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "# One node on Gadi has 48 cores - try and use up a full node before going to multiple nodes (jobs)\n",
     "\n",
-    "walltime = \"00:20:00\"\n",
+    "walltime = \"00:40:00\"\n",
     "cores = 24\n",
     "memory = str(4 * cores) + \"GB\"\n",
     "\n",
     "cluster = PBSCluster(walltime=str(walltime), cores=cores, memory=str(memory), processes=cores,\n",
     "                     job_extra_directives=[\"-q normal\",\n",
-    "                                           \"-P w42\",\n",
+    "                                           \"-P dt6\",\n",
     "                                           \"-l ncpus=\"+str(cores),\n",
     "                                           \"-l mem=\"+str(memory),\n",
     "                                           \"-l storage=gdata/w42+gdata/rt52\"],\n",
@@ -73,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "a6316e6a-6a7c-465e-8ae8-d6ee4cbbbb1c",
    "metadata": {},
    "outputs": [],
@@ -84,17 +95,148 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "d7a22723-7e10-4eac-874b-2af5b624a0df",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "    <div style=\"width: 24px; height: 24px; background-color: #e1e1e1; border: 3px solid #9D9D9D; border-radius: 5px; position: absolute;\"> </div>\n",
+       "    <div style=\"margin-left: 48px;\">\n",
+       "        <h3 style=\"margin-bottom: 0px;\">Client</h3>\n",
+       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Client-b226603f-f891-11ef-93a0-000007bdfe80</p>\n",
+       "        <table style=\"width: 100%; text-align: left;\">\n",
+       "\n",
+       "        <tr>\n",
+       "        \n",
+       "            <td style=\"text-align: left;\"><strong>Connection method:</strong> Cluster object</td>\n",
+       "            <td style=\"text-align: left;\"><strong>Cluster type:</strong> dask_jobqueue.PBSCluster</td>\n",
+       "        \n",
+       "        </tr>\n",
+       "\n",
+       "        \n",
+       "            <tr>\n",
+       "                <td style=\"text-align: left;\">\n",
+       "                    <strong>Dashboard: </strong> <a href=\"/proxy/45291/status\" target=\"_blank\">/proxy/45291/status</a>\n",
+       "                </td>\n",
+       "                <td style=\"text-align: left;\"></td>\n",
+       "            </tr>\n",
+       "        \n",
+       "\n",
+       "        </table>\n",
+       "\n",
+       "        \n",
+       "            <button style=\"margin-bottom: 12px;\" data-commandlinker-command=\"dask:populate-and-launch-layout\" data-commandlinker-args='{\"url\": \"/proxy/45291/status\" }'>\n",
+       "                Launch dashboard in JupyterLab\n",
+       "            </button>\n",
+       "        \n",
+       "\n",
+       "        \n",
+       "            <details>\n",
+       "            <summary style=\"margin-bottom: 20px;\"><h3 style=\"display: inline;\">Cluster Info</h3></summary>\n",
+       "            <div class=\"jp-RenderedHTMLCommon jp-RenderedHTML jp-mod-trusted jp-OutputArea-output\">\n",
+       "    <div style=\"width: 24px; height: 24px; background-color: #e1e1e1; border: 3px solid #9D9D9D; border-radius: 5px; position: absolute;\">\n",
+       "    </div>\n",
+       "    <div style=\"margin-left: 48px;\">\n",
+       "        <h3 style=\"margin-bottom: 0px; margin-top: 0px;\">PBSCluster</h3>\n",
+       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">c42a452b</p>\n",
+       "        <table style=\"width: 100%; text-align: left;\">\n",
+       "            <tr>\n",
+       "                <td style=\"text-align: left;\">\n",
+       "                    <strong>Dashboard:</strong> <a href=\"/proxy/45291/status\" target=\"_blank\">/proxy/45291/status</a>\n",
+       "                </td>\n",
+       "                <td style=\"text-align: left;\">\n",
+       "                    <strong>Workers:</strong> 0\n",
+       "                </td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                <td style=\"text-align: left;\">\n",
+       "                    <strong>Total threads:</strong> 0\n",
+       "                </td>\n",
+       "                <td style=\"text-align: left;\">\n",
+       "                    <strong>Total memory:</strong> 0 B\n",
+       "                </td>\n",
+       "            </tr>\n",
+       "            \n",
+       "        </table>\n",
+       "\n",
+       "        <details>\n",
+       "            <summary style=\"margin-bottom: 20px;\">\n",
+       "                <h3 style=\"display: inline;\">Scheduler Info</h3>\n",
+       "            </summary>\n",
+       "\n",
+       "            <div style=\"\">\n",
+       "    <div>\n",
+       "        <div style=\"width: 24px; height: 24px; background-color: #FFF7E5; border: 3px solid #FF6132; border-radius: 5px; position: absolute;\"> </div>\n",
+       "        <div style=\"margin-left: 48px;\">\n",
+       "            <h3 style=\"margin-bottom: 0px;\">Scheduler</h3>\n",
+       "            <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Scheduler-d300e2b3-617f-4fd9-a434-62465397871f</p>\n",
+       "            <table style=\"width: 100%; text-align: left;\">\n",
+       "                <tr>\n",
+       "                    <td style=\"text-align: left;\">\n",
+       "                        <strong>Comm:</strong> tcp://10.6.121.6:33427\n",
+       "                    </td>\n",
+       "                    <td style=\"text-align: left;\">\n",
+       "                        <strong>Workers:</strong> 0\n",
+       "                    </td>\n",
+       "                </tr>\n",
+       "                <tr>\n",
+       "                    <td style=\"text-align: left;\">\n",
+       "                        <strong>Dashboard:</strong> <a href=\"/proxy/45291/status\" target=\"_blank\">/proxy/45291/status</a>\n",
+       "                    </td>\n",
+       "                    <td style=\"text-align: left;\">\n",
+       "                        <strong>Total threads:</strong> 0\n",
+       "                    </td>\n",
+       "                </tr>\n",
+       "                <tr>\n",
+       "                    <td style=\"text-align: left;\">\n",
+       "                        <strong>Started:</strong> Just now\n",
+       "                    </td>\n",
+       "                    <td style=\"text-align: left;\">\n",
+       "                        <strong>Total memory:</strong> 0 B\n",
+       "                    </td>\n",
+       "                </tr>\n",
+       "            </table>\n",
+       "        </div>\n",
+       "    </div>\n",
+       "\n",
+       "    <details style=\"margin-left: 48px;\">\n",
+       "        <summary style=\"margin-bottom: 20px;\">\n",
+       "            <h3 style=\"display: inline;\">Workers</h3>\n",
+       "        </summary>\n",
+       "\n",
+       "        \n",
+       "\n",
+       "    </details>\n",
+       "</div>\n",
+       "\n",
+       "        </details>\n",
+       "    </div>\n",
+       "</div>\n",
+       "            </details>\n",
+       "        \n",
+       "\n",
+       "    </div>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "<Client: 'tcp://10.6.121.6:33427' processes=0 threads=0, memory=0 B>"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "client"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "6fd7c08d-be1b-4355-a855-1f864e3423ed",
    "metadata": {},
    "outputs": [],
@@ -107,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "69e182d7-741b-48dc-9371-c285073e065a",
    "metadata": {},
    "outputs": [],
@@ -125,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "97b7891b-fd2c-4a64-a7a8-2f2c9a1ac542",
    "metadata": {},
    "outputs": [],
@@ -148,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "b372fe0d-159d-4a62-9fb0-df29f18eb703",
    "metadata": {},
    "outputs": [],
@@ -167,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "b6d49654-330b-44d9-ac62-7c15cf1c033c",
    "metadata": {},
    "outputs": [],
@@ -194,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "d1052fce-1e5d-4e56-84d1-fed97934ef41",
    "metadata": {},
    "outputs": [],
@@ -211,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "fb4bb6e6-e497-4a01-88f1-e7a7f3d38df3",
    "metadata": {},
    "outputs": [],
@@ -235,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "453e67d8-49bb-4a2b-bb6a-f627de512dde",
    "metadata": {},
    "outputs": [],
@@ -259,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "88f0e51a-92ee-4d9b-8b1f-c7c2ba31120b",
    "metadata": {},
    "outputs": [],
@@ -269,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "4e7f38ae-84d8-46c5-8494-63aa7147a64c",
    "metadata": {},
    "outputs": [],
@@ -279,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "9fb4eefe-58a5-45b4-abda-4582f6b21d8f",
    "metadata": {},
    "outputs": [],
@@ -345,6 +487,99 @@
     "    #     mode=\"w\",\n",
     "    #     encoding=encoding\n",
     "    # )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e4b5de5b-f878-4340-b090-dcab4f1951b9",
+   "metadata": {},
+   "source": [
+    "### Reduce radiation by 1%"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "b1ca1fd9-f550-4b76-8da8-ad72a1083af5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1940\n",
+      "1945\n",
+      "1950\n",
+      "1955\n",
+      "1960\n",
+      "1965\n",
+      "1970\n",
+      "1975\n",
+      "1980\n",
+      "1985\n",
+      "1990\n",
+      "1995\n",
+      "2000\n",
+      "2005\n",
+      "2010\n",
+      "2015\n"
+     ]
+    }
+   ],
+   "source": [
+    "for year in years:\n",
+    "    if year % 5 == 0:\n",
+    "        print(year)\n",
+    "        \n",
+    "    # Wind speed 10m\n",
+    "    u10 = load_hourly(\n",
+    "        preprocess,\n",
+    "        \"10u\",\n",
+    "        year\n",
+    "    )\n",
+    "\n",
+    "    v10 = load_hourly(\n",
+    "        preprocess,\n",
+    "        \"10v\",\n",
+    "        year\n",
+    "    )\n",
+    "    \n",
+    "    w10 = windspeed(\n",
+    "        u10.rename({\"u10\": \"w10\"}),\n",
+    "        v10.rename({\"v10\": \"w10\"})\n",
+    "    )[\"w10\"]\n",
+    "    \n",
+    "    # Solar radiation\n",
+    "    rad = load_hourly(\n",
+    "        preprocess,\n",
+    "        \"msdwswrf\",\n",
+    "        year\n",
+    "    )[\"msdwswrf\"]\n",
+    "    \n",
+    "    rad = rad * 0.99\n",
+    "    \n",
+    "    # Temperature\n",
+    "    t = load_hourly(\n",
+    "        preprocess,\n",
+    "        \"2t\",\n",
+    "        year\n",
+    "    )[\"t2m\"]\n",
+    "    t = t - 273.15\n",
+    "    \n",
+    "    # Capacity factor\n",
+    "    cf = PV_potential(rad, w10, t)\n",
+    "    \n",
+    "    cf = cf.chunk({\"lat\": 50, \"lon\": 100, \"time\": -1})\n",
+    "    cf = cf.to_dataset(name=\"capacity_factor\")\n",
+    "    \n",
+    "    encoding = {\n",
+    "        \"capacity_factor\": {\"dtype\": \"float32\"}\n",
+    "    }\n",
+    "    cf.to_netcdf(\n",
+    "        write_path + \"/reduced1pc/solar_reduced1pc_capacity_factor_van_der_Wiel_era5_hourly_\" + str(year) + \"_Aus.nc\",\n",
+    "        mode=\"w\",\n",
+    "        encoding=encoding\n",
+    "    )"
    ]
   },
   {
